tables with outcomes.do variables

--- a/output/abccare-new-fac-ach.tex
+++ b/output/abccare-new-fac-ach.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 readschool & 15.000 & 1.233 &  15.480 & 1.364 & 0.796 \\
 mathschool & 15.345 & 1.160 &  15.192 & 1.390 & 0.959 \\
