--- a/output/abccare-new-fac-parenting.tex
+++ b/output/abccare-new-fac-parenting.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 hometot & 15.391 & 1.466 &  15.107 & 1.167 & 0.878 \\
 homeabs &  \textbf{13.029} & 0.997 &   \textbf{17.588} & 1.058 &0.061 \\
