--- a/output/abccare-old-fac-cog.tex
+++ b/output/abccare-old-fac-cog.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 iq3 & 15.472 & 1.178 &  15.194 & 1.193 & 0.918 \\
 iq4 & 14.972 & 1.071 &  15.629 & 1.102 & 0.735 \\
