--- a/output/abccare-old-fac-parenting.tex
+++ b/output/abccare-old-fac-parenting.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 earlyhome & 16.806 & 1.122 &  13.838 & 1.178 & 0.204 \\
 laterhome & 14.739 & 1.424 &  15.778 & 1.151 & 0.735 \\
