--- a/output/abccare-var-tables.tex
+++ b/output/abccare-var-tables.tex
@@ -66,29 +66,58 @@
 %----------Title-------------
 
 \begin{document}
-\title{Table of Variable and Factor Measures}
+\title{Table of Variable and Factor Measures of the Control Group}
 \author{Ruby Zhang}
 \maketitle
 
 \section{Variable Measures (10 bootstraps)}
 
-  \subsection{Cognitive Skills}
-  \input{abccare-var-iq}
+  \subsection{Self-Selected Variables (10 bootstraps)}
+    \subsubsection{Cognitive Skills}
+    \input{abccare-var-iq}
 
-  \subsection{Achievement Skills}
-  \input{abccare-var-ach}
+    \subsubsection{Achievement Skills}
+    \input{abccare-var-ach}
 
-  \subsection{Non-Cognitive Skills}
-  \input{abccare-var-socioemo}
+    \subsubsection{Non-Cognitive Skills}
+    \input{abccare-var-socioemo}
 
-  \subsection{Parenting Skills}
-  \input{abccare-var-parenting}
+    \subsubsection{Parenting Skills}
+    \input{abccare-var-parenting}
+
+  \subsection{Variables in Paper (200 bootstraps)}
+    \subsubsection{IQ}
+    \input{abccare-outcome-var-iq}
+
+    \subsubsection{Achievement}
+    \input{abccare-outcome-var-ach}
+
+    \subsubsection{Parenting}
+    \input{abccare-outcome-var-home}
+
+    \subsubsection{Social-emotional}
+    \input{abccare-outcome-var-se}
+
+    \subsubsection{Education}
+    \input{abccare-outcome-var-ed}
+
+    \subsubsection{Employment}
+    \input{abccare-outcome-var-emp}
+
+    \subsubsection{Parental income}
+    \input{abccare-outcome-var-parent}
+
+    \subsubsection{Health}
+    \input{abccare-outcome-var-health}
+
+    \subsubsection{Crime}
+    \input{abccare-outcome-var-crime}
 
 \newpage
 
 \section{Factor Measures}
 
-  \subsection{Old Factors (10 bootstraps)}
+  \subsection{Old Factors (50 bootstraps)}
 
     \subsubsection{Cognitive Skills}
     \input{abccare-old-fac-cog}
