--- a/output/abccare-new-fac-cog.tex
+++ b/output/abccare-new-fac-cog.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 earlyiq & 16.615 & 1.614 &  12.333 & 1.913 & 0.204 \\
 earlyverbaliq & 15.389 & 1.165 &  15.200 & 1.231 & 0.959 \\
