--- a/output/abccare-old-fac-ach.tex
+++ b/output/abccare-old-fac-ach.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 readschool & 15.483 & 1.186 &  15.036 & 1.305 & 0.898 \\
 mathschool & 16.097 & 1.195 &  14.862 & 1.297 & 0.673 \\
