--- a/output/abccare-old-fac-ncog.tex
+++ b/output/abccare-old-fac-ncog.tex
@@ -1,6 +1,6 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Factor} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
 earlysociab & 14.278 & 1.146 &  16.027 & 1.069 & 0.388 \\
 earlytask & 15.314 & 1.173 &  15.289 & 0.992 & 1.000 \\
