--- a/output/abccare-var-ach.tex
+++ b/output/abccare-var-ach.tex
@@ -1,42 +1,42 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Variable} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Variable} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
-\texttt{\detokenize{read5y6m}} & \textbf{99.422} & 1.609 &  \textbf{103.493} & 2.004 & 0.100 \\
-\texttt{\detokenize{math5y6m}} & 93.534 & 1.404 &  96.574 & 1.897 & 0.200 \\
-\texttt{\detokenize{know5y6m}} & 97.069 & 1.447 &  95.745 & 1.667 & 0.900 \\
-\texttt{\detokenize{read6y}} & \textbf{100.326} & 1.041 &  \textbf{103.260} & 1.353 & 0.000 \\
-\texttt{\detokenize{math6y}} & 96.485 & 1.429 &  97.458 & 1.727 & 0.500 \\
-\texttt{\detokenize{know6y}} & \textbf{98.333} & 1.412 &  \textbf{96.288} & 1.493 & 0.100 \\
-\texttt{\detokenize{read7y6m}} & 88.431 & 1.479 &  88.589 & 1.885 & 0.900 \\
-\texttt{\detokenize{math7y6m}} & 89.046 & 1.398 &  87.821 & 1.599 & 0.500 \\
-\texttt{\detokenize{know7y6m}} & 97.500 & 2.617 &  95.615 & 2.879 & 0.700 \\
-\texttt{\detokenize{read8y}} & 92.626 & 1.514 &  94.897 & 2.009 & 0.200 \\
-\texttt{\detokenize{math8y}} & 96.974 & 1.536 &  97.035 & 1.890 & 1.000 \\
-\texttt{\detokenize{know8y}} & 98.955 & 2.445 &  97.538 & 3.014 & 0.800 \\
-\texttt{\detokenize{read8y6m}} & 88.381 & 1.845 &  92.018 & 1.881 & 0.200 \\
-\texttt{\detokenize{math8y6m}} & 93.062 & 1.691 &  93.193 & 1.660 & 0.900 \\
-\texttt{\detokenize{know8y6m}} & 95.955 & 3.014 &  97.071 & 3.001 & 0.600 \\
-\texttt{\detokenize{read9y}} & 90.353 & 1.676 &  92.709 & 1.784 & 0.500 \\
-\texttt{\detokenize{math9y}} & 96.279 & 1.845 &  96.089 & 1.867 & 0.900 \\
-\texttt{\detokenize{know9y}} & 96.826 & 2.908 &  95.385 & 4.001 & 0.600 \\
-\texttt{\detokenize{read12y}} & 91.141 & 1.440 &  91.440 & 1.483 & 0.800 \\
-\texttt{\detokenize{math12y}} & 91.561 & 1.426 &  91.737 & 1.596 & 1.000 \\
-\texttt{\detokenize{know12y}} & 93.143 & 1.499 &  89.641 & 1.681 & 0.200 \\
-\texttt{\detokenize{read21y}} & 89.804 & 2.106 &  91.151 & 2.162 & 0.900 \\
-\texttt{\detokenize{math21y}} & 87.667 & 1.569 &  86.057 & 1.637 & 0.400 \\
-\texttt{\detokenize{cat_readst8y}} & \textbf{95.093} & 1.492 &  \textbf{98.550} & 2.079 & 0.100 \\
-\texttt{\detokenize{cat_mathst8y}} & 102.395 & 2.150 &  102.390 & 2.079 & 1.000 \\
-\texttt{\detokenize{wj_read7y6m}} & 88.431 & 1.479 &  88.589 & 1.885 & 1.000 \\
-\texttt{\detokenize{wj_math7y6m}} & 89.046 & 1.398 &  87.821 & 1.599 & 0.600 \\
-\texttt{\detokenize{wj_read8y}} & 92.269 & 1.522 &  93.804 & 1.995 & 0.300 \\
-\texttt{\detokenize{wj_math8y}} & 96.687 & 1.550 &  95.911 & 1.869 & 0.700 \\
-\texttt{\detokenize{wj_read8y6m}} & 88.381 & 1.845 &  92.018 & 1.881 & 0.300 \\
-\texttt{\detokenize{wj_math8y6m}} & 93.062 & 1.691 &  93.193 & 1.660 & 1.000 \\
-\texttt{\detokenize{wj_read9y}} & 90.353 & 1.676 &  92.709 & 1.784 & 0.200 \\
-\texttt{\detokenize{wj_math9y}} & 96.279 & 1.845 &  96.089 & 1.867 & 0.900 \\
-\texttt{\detokenize{wj_read12y}} & 89.057 & 1.476 &  89.906 & 1.599 & 0.300 \\
-\texttt{\detokenize{wj_math12y}} & 90.700 & 1.484 &  90.359 & 1.776 & 0.700 \\
+Achievement, Reading, 5.5 years & 97.956 & 2.247 &  99.006 & 2.472 & 0.800 \\
+Achievement, Math, 5.5 years & 90.333 & 2.293 &  94.679 & 2.191 & 0.300 \\
+Achievement, Knowledge, 5.5 years & 93.933 & 1.979 &  91.464 & 2.153 & 0.500 \\
+Achievement, Reading, 6 years & 98.965 & 1.639 &  100.495 & 1.850 & 0.400 \\
+Achievement, Math, 6 years & 96.121 & 2.207 &  94.097 & 2.263 & 0.600 \\
+Achievement, Knowledge, 6 years & 95.424 & 2.042 &  92.968 & 1.898 & 0.600 \\
+Achievement, Reading, 7.5 years & 87.500 & 2.418 &  85.800 & 2.731 & 0.600 \\
+Achievement, Math, 7.5 years & 89.531 & 2.450 &  86.467 & 2.290 & 0.200 \\
+Achievement, Knowledge, 7.5 years & 98.308 & 3.936 &  92.778 & 2.613 & 0.300 \\
+Achievement, Reading, 8 years & 90.595 & 2.183 &  91.332 & 2.743 & 0.900 \\
+Achievement, Math, 8 years & 95.942 & 2.528 &  94.482 & 2.601 & 0.500 \\
+Achievement, Knowledge, 8 years & \textbf{99.308} & 3.516 &  \textbf{94.333} & 2.511 & 0.100 \\
+Achievement, Reading, 8.5 years & 86.000 & 2.876 &  87.034 & 2.729 & 0.300 \\
+Achievement, Math, 8.5 years & 91.156 & 2.929 &  90.233 & 2.324 & 0.700 \\
+Achievement, Knowledge, 8.5 years & 97.538 & 4.814 &  92.222 & 2.559 & 0.500 \\
+Achievement, Reading, 9 years & 88.333 & 2.539 &  88.000 & 2.387 & 0.900 \\
+Achievement, Math, 9 years & 94.636 & 3.203 &  93.733 & 2.624 & 0.700 \\
+Achievement, Knowledge, 9 years & 97.929 & 4.281 &  90.889 & 3.676 & 0.200 \\
+Achievement, Reading, 12 years & 91.137 & 1.920 &  88.227 & 1.892 & 0.300 \\
+Achievement, Math, 12 years & \textbf{91.530} & 2.295 &  \textbf{87.541} & 2.166 & 0.100 \\
+Achievement, Knowledge, 12 years & \textbf{92.257} & 2.401 &  \textbf{85.324} & 2.093 & 0.000 \\
+Achievement, Reading, 21 years & 89.217 & 2.646 &  86.214 & 2.573 & 0.200 \\
+Achievement, Math, 21 years & \textbf{86.957} & 2.422 &  \textbf{82.393} & 1.991 & 0.100 \\
+CAT, Reading, 8 years & 93.444 & 2.044 &  93.900 & 2.560 & 1.000 \\
+CAT, Math, 8 years & 98.778 & 2.736 &  97.300 & 2.718 & 0.600 \\
+WJ, Reading, 7.5 years & 87.500 & 2.418 &  85.800 & 2.731 & 0.300 \\
+WJ, Math, 7.5 years & 89.531 & 2.450 &  86.467 & 2.290 & 0.500 \\
+WJ, Reading, 8 years & 89.844 & 2.142 &  90.267 & 2.722 & 1.000 \\
+WJ, Math, 8 years & 95.844 & 2.545 &  93.433 & 2.587 & 0.300 \\
+WJ, Reading, 8.5 years & 88.615 & 5.561 &  92.444 & 6.178 & 0.900 \\
+WJ, Math, 8.5 years & 93.615 & 6.017 &  94.778 & 5.489 & 0.600 \\
+WJ, Reading, 9 years & 94.357 & 4.296 &  94.667 & 4.637 & 1.000 \\
+WJ, Math, 9 years & 97.071 & 5.900 &  99.333 & 5.169 & 0.200 \\
+WJ, Reading, 12 years & 88.771 & 2.052 &  86.412 & 1.972 & 0.200 \\
+WJ, Math, 12 years & 90.486 & 2.453 &  86.118 & 2.373 & 0.200 \\
 \bottomrule
 \end{longtable}
 % This file generated by: /scripts/abccare/genderdifferences/abccare-tables.do
