--- a/output/abccare-var-socioemo.tex
+++ b/output/abccare-var-socioemo.tex
@@ -1,59 +1,59 @@
 \begin{longtable}{c c c c c c}
 \toprule
-\textbf{Variable} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{P-value} \\
+\textbf{Variable} & \textbf{Male} & \textbf{Male S.E.}  & \textbf{Female} & \textbf{Female S.E.} & \textbf{$ p $-value} \\
 \midrule
-\texttt{\detokenize{ibr_task0y6m}} & 19.803 & 0.510 &  19.466 & 0.478 & 0.700 \\
-\texttt{\detokenize{ibr_task1y}} & 21.712 & 0.378 &  21.000 & 0.427 & 0.300 \\
-\texttt{\detokenize{ibr_task1y6m}} & \textbf{21.542} & 0.502 &  \textbf{22.366} & 0.457 & 0.000 \\
-\texttt{\detokenize{ibr_task2y}} & 22.381 & 0.481 &  22.490 & 0.522 & 0.800 \\
-\texttt{\detokenize{ibr_actv0y6m}} & \textbf{12.373} & 0.363 &  \textbf{11.603} & 0.370 & 0.100 \\
-\texttt{\detokenize{ibr_actv1y}} & 13.378 & 0.364 &  13.458 & 0.462 & 0.800 \\
-\texttt{\detokenize{ibr_actv1y6m}} & 14.736 & 0.421 &  15.085 & 0.435 & 0.700 \\
-\texttt{\detokenize{ibr_actv2y}} & 14.532 & 0.561 &  14.880 & 0.535 & 0.600 \\
-\texttt{\detokenize{ibr_sociab0y6m}} & 10.171 & 0.168 &  10.384 & 0.160 & 0.400 \\
-\texttt{\detokenize{ibr_sociab1y}} & \textbf{10.541} & 0.163 &  \textbf{11.438} & 0.150 & 0.000 \\
-\texttt{\detokenize{ibr_sociab1y6m}} & \textbf{10.789} & 0.196 &  \textbf{11.614} & 0.205 & 0.000 \\
-\texttt{\detokenize{ibr_sociab2y}} & \textbf{10.268} & 0.277 &  \textbf{11.057} & 0.221 & 0.000 \\
-\texttt{\detokenize{new_kr_dst2y}} & 3.881 & 0.099 &  3.781 & 0.137 & 0.500 \\
-\texttt{\detokenize{kr_att2y}} & 3.294 & 0.115 &  3.380 & 0.143 & 0.200 \\
-\texttt{\detokenize{new_kr_withd2y}} & 4.780 & 0.116 &  4.908 & 0.113 & 0.200 \\
-\texttt{\detokenize{kr_conf2y}} & 3.643 & 0.112 &  3.735 & 0.124 & 0.500 \\
-\texttt{\detokenize{new_cbi_iv5y6m}} & 11.516 & 0.307 &  11.737 & 0.343 & 0.800 \\
-\texttt{\detokenize{new_cbi_di5y6m}} & 9.274 & 0.312 &  8.860 & 0.342 & 0.400 \\
-\texttt{\detokenize{new_cbi_de5y6m}} & \textbf{11.645} & 0.292 &  \textbf{10.789} & 0.312 & 0.000 \\
-\texttt{\detokenize{cbi_ex5y6m}} & 18.161 & 0.488 &  18.895 & 0.416 & 0.500 \\
-\texttt{\detokenize{cbi_cr5y6m}} & 15.311 & 0.451 &  15.614 & 0.521 & 0.900 \\
-\texttt{\detokenize{cbi_ve5y6m}} & 13.823 & 0.434 &  14.193 & 0.586 & 0.400 \\
-\texttt{\detokenize{cbi_ta5y6m}} & 15.710 & 0.583 &  15.509 & 0.604 & 0.800 \\
-\texttt{\detokenize{cbi_co5y6m}} & 17.016 & 0.514 &  17.411 & 0.560 & 0.600 \\
-\texttt{\detokenize{new_wlkr_act8y}} & \textbf{18.106} & 0.873 &  \textbf{22.000} & 0.862 & 0.000 \\
-\texttt{\detokenize{new_wlkr_withd8y}} & 13.106 & 0.242 &  13.267 & 0.261 & 0.500 \\
-\texttt{\detokenize{new_wlkr_dst8y}} & \textbf{8.515} & 0.436 &  \textbf{10.711} & 0.497 & 0.000 \\
-\texttt{\detokenize{new_wlkr_peer8y}} & \textbf{22.788} & 0.364 &  \textbf{23.822} & 0.396 & 0.100 \\
-\texttt{\detokenize{new_wlkr_immt8y}} & 17.303 & 0.334 &  17.378 & 0.464 & 0.900 \\
-\texttt{\detokenize{new_cbi_ho12y}} & 9.406 & 0.672 &  10.333 & 0.485 & 0.200 \\
-\texttt{\detokenize{new_cbi_de12y}} & 11.226 & 0.461 &  11.056 & 0.486 & 0.700 \\
-\texttt{\detokenize{new_cbi_di12y}} & 8.219 & 0.519 &  9.000 & 0.506 & 0.300 \\
-\texttt{\detokenize{new_cbi_iv12y}} & 11.031 & 0.526 &  10.833 & 0.455 & 0.900 \\
-\texttt{\detokenize{cbi_ex12y}} & 17.812 & 0.782 &  17.667 & 0.664 & 0.900 \\
-\texttt{\detokenize{cbi_cr12y}} & 12.844 & 0.669 &  13.111 & 0.630 & 0.700 \\
-\texttt{\detokenize{cbi_ve12y}} & 11.281 & 0.635 &  12.111 & 0.618 & 0.300 \\
-\texttt{\detokenize{cbi_ta12y}} & \textbf{12.188} & 1.002 &  \textbf{13.389} & 0.788 & 0.000 \\
-\texttt{\detokenize{cbi_co12y}} & 16.161 & 0.986 &  16.389 & 0.762 & 0.900 \\
-\texttt{\detokenize{new_kr_dst7y}} & 4.701 & 0.099 &  4.684 & 0.108 & 0.800 \\
-\texttt{\detokenize{kr_att7y}} & \textbf{4.580} & 0.114 &  \textbf{4.729} & 0.131 & 0.100 \\
-\texttt{\detokenize{new_kr_withd7y}} & 4.970 & 0.061 &  5.069 & 0.076 & 0.500 \\
-\texttt{\detokenize{kr_conf7y}} & 4.884 & 0.086 &  4.955 & 0.090 & 0.900 \\
-\texttt{\detokenize{new_easy_gen}} & \textbf{14.422} & 0.470 &  \textbf{13.737} & 0.540 & 0.100 \\
-\texttt{\detokenize{new_easy_fear}} & 15.797 & 0.517 &  15.526 & 0.476 & 0.400 \\
-\texttt{\detokenize{new_easy_ang}} & 14.812 & 0.472 &  15.123 & 0.555 & 0.600 \\
-\texttt{\detokenize{new_easy_temp}} & \textbf{12.453} & 0.522 &  \textbf{13.684} & 0.587 & 0.000 \\
-\texttt{\detokenize{new_easy_vig}} & 11.500 & 0.444 &  11.632 & 0.467 & 1.000 \\
-\texttt{\detokenize{new_easy_cont}} & 18.312 & 0.377 &  18.684 & 0.461 & 0.400 \\
-\texttt{\detokenize{new_easy_deci}} & 15.016 & 0.380 &  14.754 & 0.398 & 0.700 \\
-\texttt{\detokenize{new_easy_sens}} & 13.406 & 0.365 &  14.140 & 0.470 & 0.200 \\
-\texttt{\detokenize{new_easy_pers}} & 16.766 & 0.443 &  16.509 & 0.431 & 0.600 \\
-\texttt{\detokenize{easy_soci}} & \textbf{19.109} & 0.381 &  \textbf{19.947} & 0.359 & 0.000 \\
+IBR, Task orient., 0.5 years & 19.949 & 0.763 &  19.400 & 0.722 & 0.700 \\
+IBR, Task orient., 1 year & 21.270 & 0.497 &  20.575 & 0.522 & 0.300 \\
+IBR, Task orient., 1.5 years & 20.611 & 0.730 &  21.000 & 0.663 & 0.500 \\
+IBR, Task orient., 2 years & 21.133 & 0.664 &  21.846 & 0.760 & 0.400 \\
+IBR, Activity lvl., 0.5 years & \textbf{12.421} & 0.542 &  \textbf{11.025} & 0.551 & 0.000 \\
+IBR, Activity lvl., 1 year & 12.947 & 0.533 &  12.872 & 0.614 & 1.000 \\
+IBR, Activity lvl., 1.5 years & 15.194 & 0.641 &  15.105 & 0.622 & 0.900 \\
+IBR, Activity lvl., 2 years & 15.483 & 0.730 &  14.704 & 0.766 & 0.400 \\
+IBR, Sociability, 0.5 years & 10.282 & 0.244 &  10.275 & 0.224 & 1.000 \\
+IBR, Sociability, 1 year & \textbf{10.421} & 0.225 &  \textbf{11.200} & 0.230 & 0.100 \\
+IBR, Sociability, 1.5 years & 11.139 & 0.271 &  11.108 & 0.300 & 1.000 \\
+IBR, Sociability, 2 years & 10.353 & 0.402 &  10.944 & 0.347 & 0.200 \\
+KR, Attentive/Cooperative (rev.), 2y & 3.664 & 0.128 &  3.694 & 0.191 & 0.900 \\
+KR, Attentive/Cooperative, 2y & \textbf{2.841} & 0.132 &  \textbf{3.126} & 0.170 & 0.100 \\
+KR, Confident/Friendly (rev.), 2y & 4.655 & 0.175 &  4.772 & 0.160 & 0.600 \\
+KR, Confident/Friendly, 2y & 3.305 & 0.180 &  3.524 & 0.179 & 0.200 \\
+KR, Attentive/Cooperative (rev.), 7y & 4.647 & 0.132 &  4.654 & 0.148 & 1.000 \\
+KR, Attentive/Cooperative, 7y & 4.641 & 0.113 &  4.692 & 0.176 & 0.900 \\
+KR, Confident/Friendly (rev.), 7y & 4.885 & 0.094 &  5.019 & 0.086 & 0.200 \\
+KR, Confident/Friendly, 7y & 4.825 & 0.132 &  4.863 & 0.116 & 0.800 \\
+CBI, Extraversion (rev.), 5.5 years & 11.710 & 0.391 &  11.839 & 0.491 & 1.000 \\
+CBI, Task Orientation (rev.), 5.5 years & 9.806 & 0.443 &  8.774 & 0.367 & 0.300 \\
+CBI, Independence, 5.5 years & \textbf{12.065} & 0.445 &  \textbf{10.226} & 0.454 & 0.000 \\
+CBI, Agreeableness, 12 years & 11.000 & 0.784 &  10.444 & 0.612 & 0.900 \\
+CBI, Independence, 12 years & \textbf{12.056} & 0.431 &  \textbf{11.278} & 0.832 & 0.100 \\
+CBI, Task Orientation (rev.), 12 years & 8.842 & 0.766 &  9.167 & 0.829 & 0.700 \\
+CBI, Extraversion (rev.), 12 years & 11.368 & 0.654 &  11.222 & 0.669 & 1.000 \\
+CBI, Extraversion, 12 years & 17.895 & 1.040 &  17.778 & 1.024 & 0.900 \\
+CBI, Creativity, 12 years & 13.526 & 0.842 &  12.333 & 0.741 & 0.400 \\
+CBI, Verbal Intelligence, 12 years & 11.684 & 0.757 &  11.556 & 0.883 & 1.000 \\
+CBI, Task Orientation, 12 years & 13.474 & 1.407 &  13.667 & 1.169 & 0.900 \\
+CBI, Considerate, 12 years & 18.111 & 1.268 &  16.333 & 1.242 & 0.200 \\
+CBI, Extraversion, 5.5 years & 18.387 & 0.618 &  19.290 & 0.457 & 0.300 \\
+CBI, Creativity, 5.5 years & 15.000 & 0.577 &  14.645 & 0.662 & 0.600 \\
+CBI, Verbal Intelligence, 5.5 years & 13.387 & 0.524 &  12.613 & 0.820 & 0.300 \\
+CBI, Task Orientation, 5.5 years & \textbf{16.710} & 0.849 &  \textbf{14.839} & 0.758 & 0.100 \\
+CBI, Considerate, 5.5 years & 18.710 & 0.722 &  18.400 & 0.676 & 0.800 \\
+Walker, Well Behaved, 8 years & 21.312 & 0.923 &  22.115 & 1.038 & 0.300 \\
+Walker, Extraversion, 8 years & 13.031 & 0.340 &  13.385 & 0.347 & 0.500 \\
+Walker, Task Orientation, 8 years & 9.250 & 0.604 &  10.577 & 0.563 & 0.200 \\
+Walker, Good Peer Relationships, 8 years & 23.062 & 0.518 &  23.654 & 0.579 & 0.600 \\
+Walker, Mature, 8 years & \textbf{17.781} & 0.310 &  \textbf{16.808} & 0.713 & 0.000 \\
+EASI, Less Emotionality, 8y & \textbf{14.906} & 0.698 &  \textbf{13.710} & 0.761 & 0.100 \\
+EASI, Less Fear (rev.), (rev.) 8y & 16.344 & 0.712 &  16.000 & 0.742 & 0.800 \\
+EASI, Less Anger (rev.), 8y & 15.031 & 0.616 &  15.097 & 0.728 & 1.000 \\
+EASI, Less Tempo (rev.), 8y & 12.594 & 0.885 &  12.871 & 0.829 & 0.600 \\
+EASI, Less Vigor (rev.), 8y & 11.531 & 0.635 &  11.032 & 0.676 & 0.800 \\
+EASI, Control (rev.), 8y & 18.781 & 0.513 &  18.935 & 0.637 & 0.900 \\
+EASI, Decisive (rev.), 8y & 15.188 & 0.536 &  15.548 & 0.477 & 0.500 \\
+EASI, Less Sensation (rev.), 8y & 13.156 & 0.548 &  13.871 & 0.709 & 0.600 \\
+EASI, Persistence (rev.), 8y & 16.562 & 0.510 &  16.129 & 0.650 & 0.700 \\
+EASI, Sociability (rev.), 8y & 19.062 & 0.568 &  20.097 & 0.446 & 0.200 \\
 \bottomrule
 \end{longtable}
 % This file generated by: /scripts/abccare/genderdifferences/abccare-tables.do
