appendix with categories

--- a/Appendices/Results_treatmenteffects.tex
+++ b/Appendices/Results_treatmenteffects.tex
@@ -130,6 +130,137 @@ Note: Panel (a) displays the distribution of the treatment effect estimate of th
 \input{output/abccare_outcomes_list}
 \doublespacing
 
+\subsubsection{Gender Differences in Outcomes}
+\label{appendix:gdiff-outcome-list}
+
+Tables~\ref{tab:tab1-iq} through~\ref{tab:tab1-crime} list the variables for each category used in Table~\ref{tab:proportion-table} and the associated figures. The tables below report the means of the control group and test the hypothesis that these means are different from each other.
+
+\begin{table}
+\centering
+\caption{Gender Differences, IQ}\label{tab:tab1-iq}
+\begin{adjustbox}{width=0.8\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-iq}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the IQ category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+
+\begin{table}
+\centering
+\caption{Gender Differences, Achievement}\label{tab:tab1-ach}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-ach}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Achievement category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Gender Differences, Parenting}\label{tab:tab1-home}
+\begin{adjustbox}{width=0.8\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-home}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Parenting category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+
+\begin{table}
+\centering
+\caption{Gender Differences, Social-emotional}\label{tab:tab1-se}
+\begin{adjustbox}{width=0.625\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-se}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Social-emotional category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Gender Differences, Education}\label{tab:tab1-ed}
+\begin{adjustbox}{width=0.8\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-ed}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Education category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Gender Differences, Employment}\label{tab:tab1-emp}
+\begin{adjustbox}{width=0.9\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-emp}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Employment category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Gender Differences, Parental Income}\label{tab:tab1-pinc}
+\begin{adjustbox}{width=0.9\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-parent}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Parental Income category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Gender Differences, Health}\label{tab:tab1-health}
+\begin{adjustbox}{width=0.9\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-health}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Health category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+\begin{table}
+\centering
+\caption{Gender Differences, Crime}\label{tab:tab1-crime}
+\begin{adjustbox}{width=0.9\textwidth}
+\begin{threeparttable}
+\input{output/abccare-outcome-var-crime}
+\begin{tablenotes}
+\footnotesize
+\item Note: The variables in this list make up the Crime category in Table~\ref{tab:proportion-table}. Male and Female show the means of the males and females in the control group. S.E. is the standard error. The $p$-values are two-sided testing whether the mean of the males equals the mean of the females. Both the standard errors and the $p$-values are computed using 200 bootstraps. Bolded means indicate that the $p$-values are less than 0.10.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
 \subsection{Estimates} \label{appendix:estimates}
 
 \noindent Table~\ref{table:abccare_rslt_pooled_counts} shows that across all methods of estimation, pooling males and females, over 70\% of the treatment effect estimates are beneficial. When using a 10\% statistical significance level, almost 40\% of all estimates are beneficial. These statistics allow us to reject the hypothesis that there are no treatment effects. \\
