--- a/sections/2_data.tex
+++ b/sections/2_data.tex
@@ -23,7 +23,7 @@ CARE included an additional arm of treatment. In addition to the services listed
 Figure~\ref{fig:family-over-time} presents one aspect of family disadvantage.  The figure shows the evolution of the fathers' presence over time. At birth, there were few fathers present, especially for the females in the treatment group. This is a pattern commonly found in the literature. After birth, the proportion of fathers present, conditional being present at birth, remains stable.\footnote{For a more detailed description of the sample's disadvantage, see Appendix~\ref{appendix:background}.}
 
 \begin{figure}[H]
-\textbf{[JJH: Looks like a treatment effect in father present.]}
+\textbf{[JJH: Looks like a treatment effect on father present.][We report treatment effects on father present in Appendix C. There is a negative treatment effect for females between 3 and 5 years.}
 \begin{center}
 \caption{Father Present Over Time}
 \label{fig:family-over-time}
