--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -16,24 +16,12 @@ To preview of our analysis, we report gender differences of outcomes in Figure~\
 \centering
 \caption{Proportion of Outcomes Males $>$ Females, by Outcome Category}
 \label{fig:proportion}
-\begin{subfigure}[h]{0.8\textwidth}
-	\centering
-	\caption{Control Gender Gaps}
-	\label{fig:means-sociab}
-	\includegraphics[width=\textwidth]{output/gendergaps-fullcontrol}
-\end{subfigure}
-
-\begin{subfigure}[h]{0.8\textwidth}
-	\centering
-	\caption{Treatment Gender Gaps}
-	\label{fig:means-years}
-	\includegraphics[width=\textwidth]{output/gendergaps-treatment}
-\end{subfigure} 
+	\includegraphics[width=\textwidth]{output/gendergaps-treat-vs-fullcontrol}
 \footnotesize \justify
-Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 100 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes. 
+Note: These plots show the proportion of outcomes, by outcome category, for which the males' mean is larger than the females' mean. The standard errors and the $p$-values are computed using 200 bootstraps. The $p$-values are one-sided and test the null hypothesis that the proportion of outcomes is greater than $\frac{1}{2}$ The crime outcomes are all coded so that a higher value indicates more criminal activity. All other outcome categories have higher values corresponding to socially desirable outcomes. The variables for each outcome category are listed in Appendix~\ref{appendix:gdiff-outcome-list}.
 \end{figure}
 
-Table~\ref{tab:proportion-table} summarizes the gender gaps in these plots as well as those when considering the alternative setting of the control-group children. In the control group, the proportions of outcomes for which males do better than females is higher than $\frac{1}{2}$ for most of the categories, although by no means are all statistically significant. Exceptions include social-emotional skills, in which females surpass males, and crime, in which the outcomes are coded such that higher values correspond with less criminal activity. \textbf{[JJH: Code crime a positive!]} Treatment reverses the gaps for achievement, education, employment, parental income, and over all outcomes. It widens the gap for health, with treatment leading males to achieve better health outcomes. Considering control-group subjects who stay at home, females have better health outcomes and commit more crimes. Both outcomes are reduced with treatment \textbf{[JJH: Why worse health?]}. Finally, the males who attend lower-quality alternative preschools do not outperform females on any of the outcome categories associated with cognition, education, and parenting. This indicates an early-life disadvantage that enriched early childcare programs partially correct.
+Table~\ref{tab:proportion-table} summarizes the gender gaps in these plots as well as those when considering the alternative setting of the control-group children. In the control group, the proportions of outcomes for which males do better than females is higher than $\frac{1}{2}$ for most of the categories, although by no means are all statistically significant. Exceptions include social-emotional skills, in which females surpass males, and crime, in which the outcomes are coded such that higher values correspond with less criminal activity. \textbf{[JJH: Code crime a positive!][This is implemented.]} Treatment reverses the gaps for achievement, education, employment, parental income, and over all outcomes. It widens the gap for health, with treatment leading males to achieve better health outcomes. Considering control-group subjects who stay at home, females have better health outcomes and commit more crimes. Both outcomes are reduced with treatment \textbf{[JJH: Why worse health?]}. Finally, the males who attend lower-quality alternative preschools do not outperform females on any of the outcome categories associated with cognition, education, and parenting. This indicates an early-life disadvantage that enriched early childcare programs partially correct.
 
 \begin{table}[H]
 \centering
@@ -43,14 +31,14 @@ Table~\ref{tab:proportion-table} summarizes the gender gaps in these plots as we
 \input{output/abccare-gendergaps-summarizingtable}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A checkmark indicates that the proportion of outcomes in the corresponding category is larger than $\frac{1}{2}$, meaning that males outperform females. A checkmark with an asterisk indicates that the proportion is significantly larger than $\frac{1}{2}$. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative preschools. Column (4) is the difference between males and females in the treatment group.
+\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A \checkmark indicates that the proportion of outcomes in the corresponding category is larger than $\frac{1}{2}$, meaning that males outperform females. A \checkmark* indicates that the proportion is significantly larger than $\frac{1}{2}$. A $\times$ indicates that the proportion is less than $\frac{1}{2}$. A $\times$* indicates that it is significantly less than $\frac{1}{2}$. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative preschools. Column (4) is the difference between males and females in the treatment group. The variables for each outcome category are listed in Appendix~\ref{appendix:gdiff-outcome-list}.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
 
 Many studies have shown the potential for early-life interventions to improve the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Several of these studies report effects by gender and find that males and females differently benefit from early childhood education. For example, \citet{Heckman_Moon_etal_2010_QE} and \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, analyze randomized controlled trials with long-term data follow-ups, and find that intervening early in life more positively affects education for females and labor market and health outcomes for males. Other studies analyzing programs with shorter-term follow-up also find similar patterns of gender differences in early skills and academic outcomes.\footnote{\citet{Deming_2009_AEJAE,Ou_Reynolds_2010_Mechanisms_CYSR,Magnuson_Kelchen_Duncan_etal_2016_ECRQ}.} None of these studies have examined the gender gap and how treatment alters it.
 
-This paper reports the treatment effects of ABC/CARE by gender. We report treatment effects comparing treated outcomes with different control conditions, including staying at home or attending other center-based care that was of lower quality than the ABC/CARE program.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although these alternate centers followed state and federal standards, they were of lower quality than the ABC/CARE program.} Unlike previous studies, we compute treatment effects comparing the treatment group to the control group fixing those in the control group to these two alternate counterfactuals (shown in Figure 1?).\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE, Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.}$^,$\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE} for work related to control substitution.} Home care is beneficial for boys. 
+This paper reports the treatment effects of ABC/CARE by gender. We report treatment effects comparing treated outcomes with different control conditions, including staying at home or attending other center-based care that was of lower quality than the ABC/CARE program.\footnote{Historical documentation, records, and evidence from knowledgeable individuals indicate that although these alternate centers followed state and federal standards, they were of lower quality than the ABC/CARE program.} Unlike previous studies, we compute treatment effects comparing the treatment group to the control group fixing those in the control group to these two alternate counterfactuals (shown in Figure~\ref{fig:proportion}).\footnote{Previous studies presenting treatment effects of ABC and CARE include \citet{Ramey_etal_1985_Project-CARE_TiECSE, Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}.}$^,$\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE} for work related to control substitution.} Home care is beneficial for boys. 
 
 This paper unfolds in the following way. In Section~\ref{sec:data}, we describe the experimental data and its special features. We document that a considerable proportion of the control group children attend lower (than treatment) preschools. In Sections~\ref{sec:parameters} and~\ref{sec:combining-functions} we define the treatment effects estimated. Section~\ref{sec:treatment-effects} reports the treatment effects overall and by gender and establish the existence of sharp gender effects in many categories of outcomes. Section~\ref{sec:gender-differences} discusses differences in the proportions of outcomes favoring men by category. Section~\ref{sec:conclusion} discusses the sources of these differences.
 
