--- a/sections/6_gender-differences.tex
+++ b/sections/6_gender-differences.tex
@@ -3,7 +3,7 @@
 This section discusses the factors producing gender differences. A major determinant is the choice of the alternative child care arrangements. 
 Estimated treatment effects are very similar across genders for treatment compared to those staying at home full time. Males benefit much more from treatment relative to alternative preschools compared to their benefits from treatment relative to staying at home. This result is consistent with previous research that shows (i) stark gender differences resulting from attending low quality childcare \citep{Kottelenberg-Lehrer_2014_Gender-Effects,Baker_Gruber_Milligan_2015_Noncog_Defects}; and (ii) that females are less sensitive to uncertain environments (see, e.g., \citealp{Autor-etal_2015_Family-Disadvantage}).
 
-In the Introduction (Figure 1?), we show the proportion of outcomes, by outcome category, for which the males exceed the females. Here, we further divide the control group by the alternative settings and both the treatment and control groups by father present, an important moderator. Figure~\ref{fig:proportion-altpre} shows the proportions dividing by alternative setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend alternative preschool, the males who stay at home have similar crime outcomes as the females. Given the prominence of the male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative preschools for the males. 
+In the Section~\ref{sec:introduction} (Figure~\ref{fig:proportion}), we show the proportion of outcomes, by outcome category, for which the males exceed the females. Here, we further divide the control group by the alternative settings and both the treatment and control groups by father present, an important moderator. Figure~\ref{fig:proportion-altpre} shows the proportions dividing by alternative setting. The males who stay at home do better than the females in cognitive and parenting measures, employment, and across all outcomes. Unlike the males who attend alternative preschool, the males who stay at home have similar crime outcomes as the females. Given the prominence of the male criminal activity, this finding highlights the magnitude of harm caused by low-quality alternative preschools for the males. 
 
 \begin{figure}[!htbp]
 \centering
