pushing gender differences table

--- a/sections/5_treatment-effects.tex
+++ b/sections/5_treatment-effects.tex
@@ -45,6 +45,20 @@ The estimates contrasting the effects for females and males in (3) and (5) are n
 
 \textbf{[JJH: We need a test for equation of treatment effects across genders.]}
 
+\begin{sidewaystable}[!htbp]
+\centering
+\begin{threeparttable}
+\caption{Gender Differences of Treatment Effects}\label{table:genderdifference-tes}
+\begin{scriptsize}
+\input{output/select_rslt_combined_gdiff.tex}
+\end{scriptsize}
+\begin{tablenotes}
+\scriptsize
+Note: 
+\end{tablenotes}
+\end{threeparttable}
+\end{sidewaystable}
+
 \subsection{Estimated Combining Functions}
 
 We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:results}. Frequent measures of cognitive, social-emotional, and parenting skills were collected during the intervention and while the subjects were in school. The researchers collected information on the subjects' academics including grade retention and special education. The adult surveys (at ages 21 and 30) cover items related to employment, post-secondary education, health, criminal activity, and family structure. When the subjects were in their mid 30s, the researchers collected administrative crime data and data from a full medical survey.
