added one tablenote

--- a/sections/5_treatment-effects.tex
+++ b/sections/5_treatment-effects.tex
@@ -55,7 +55,7 @@ Finally, we test whether the estimated treatment effects are equal across gender
 \end{scriptsize}
 \begin{tablenotes}
 \scriptsize
-Note: 
+Note: This table reproduces the control-group means and estimates reported in (1) in Tables~\ref{table:tescombinedmales} and~\ref{table:tescombinedfemales} (Effect). The Difference column reports the difference between the male and female treatment effects. The two-sided $p$-value tests whether that difference is equal to 0. The $p$-values are calculated using 1,000 bootstraps. 
 \end{tablenotes}
 \end{threeparttable}
 \end{sidewaystable}
