bib table and file

--- a/heckman.bib
+++ b/heckman.bib
@@ -1,6 +1,49 @@
 % This file was created with JabRef 2.10.
 % Encoding: Cp1252
 
+@article{lundberg2005sons,
+  title={Sons, daughters, and parental behaviour},
+  author={Lundberg, Shelly},
+  journal={Oxford Review of Economic Policy},
+  volume={21},
+  number={3},
+  pages={340--356},
+  year={2005},
+  publisher={Oxford Univ Press}
+}
+
+@article{cornwell2013noncognitive,
+  title={Noncognitive skills and the gender disparities in test scores and teacher assessments: Evidence from primary school},
+  author={Cornwell, Christopher and Mustard, David B and Van Parys, Jessica},
+  journal={Journal of Human Resources},
+  volume={48},
+  number={1},
+  pages={236--264},
+  year={2013},
+  publisher={University of Wisconsin Press}
+}
+
+@article{golsteyn2014gender,
+  title={Gender gaps in primary school achievement: A decomposition into endowments and returns to IQ and non-cognitive factors},
+  author={Golsteyn, Bart HH and Schils, Trudie},
+  journal={Economics of Education Review},
+  volume={41},
+  pages={176--187},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@TechReport{kottelenberg_Gender,
+  Title                    = {The Gender Effects of Universal Child Care in Canada: Much ado about Boys},
+  Author                   = {Kottelenberg, Michael J and Lehrer, Steven F},
+  Institution              = {NBER},
+  Year                     = {2014},
+  Type                     = {{W}orking {P}aper},
+
+  Timestamp                = {2008.11.29}
+}
+
+
 
 @TechReport{dHaultfoeuille_CompCondition,
   Title                    = {On the Completeness Condition in Nonparametric Instrumental Problems},
